# tasktray-chime

./: .gitignore  Cargo.toml  Makefile  README.md  config.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: spec.md
src/: audio.rs  config.rs  logging.rs  main.rs  scheduler.rs  test_audio.rs  tray.rs
