[package]
name = "tasktray-chime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
cron = "0.15.0"
rodio = { version = "0.21.1", features = ["symphonia-mp3", "symphonia-all"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tray-icon = "0.21.1"

[dev-dependencies]
rodio = { version = "0.21.1", features = ["default"] }
